Before shifting back to development to fix the issue where facebook logins are failing in the app

--- a/app/assets/stylesheets/admin/admin.css
+++ b/app/assets/stylesheets/admin/admin.css
@@ -415,6 +415,87 @@ table.ui-datepicker-calendar {
   table.ui-datepicker-calendar .ui-datepicker-current-day {
     background: #1b6e8a; }
 
+/* City select styling */
+#citySelect {
+  background: #737373;
+  color: white;
+  padding: 10px;
+  width: 200px;
+  -moz-border-radius: 0px;
+  -webkit-border-radius: 3px 3px 3px 3px;
+  border-radius: 3px 3px 3px 3px; }
+  #citySelect:hover {
+    background: #8a8a8a;
+    cursor: pointer; }
+  #citySelect i {
+    font-size: 1.4em;
+    line-height: 20px;
+    background: #8a8a8a;
+    padding: 10px;
+    margin: -10px -10px 0 0;
+    border: 1px solid #8a8a8a;
+    -webkit-border-top-right-radius: 3px;
+    -webkit-border-bottom-right-radius: 3px;
+    -moz-border-radius-topright: 3px;
+    -moz-border-radius-bottomright: 3px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px; }
+
+.hidden_div {
+  visibility: hidden; }
+
+#cityList {
+  z-index: 1000;
+  position: absolute;
+  left: 15px;
+  top: 69px;
+  display: block;
+  width: 200px;
+  background: #f8f8f8;
+  border: 1px solid #ececec;
+  margin-top: 10px;
+  -webkit-box-shadow: 1px 0px 10px rgba(50, 50, 50, 0.2);
+  -moz-box-shadow: 1px 0px 10px rgba(50, 50, 50, 0.2);
+  box-shadow: 1px 0px 10px rgba(50, 50, 50, 0.2);
+  -moz-border-radius: 0px;
+  -webkit-border-radius: 6px 6px 6px 6px;
+  border-radius: 6px 6px 6px 6px; }
+  #cityList ul {
+    list-style: none;
+    margin: 10px 0 0 0;
+    padding: 0; }
+    #cityList ul strong {
+      padding: 10px; }
+    #cityList ul ul li {
+      padding: 10px 30px 10px 20px;
+      margin-right: 10px; }
+      #cityList ul ul li:hover {
+        background: #ececec;
+        cursor: pointer; }
+
+#cityList:after, #cityList:before {
+  bottom: 100%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none; }
+
+#cityList:after {
+  border-color: rgba(248, 248, 248, 0);
+  border-bottom-color: #f8f8f8;
+  border-width: 10px;
+  left: 90%;
+  margin-left: -10px; }
+
+#cityList:before {
+  border-color: rgba(236, 236, 236, 0);
+  border-bottom-color: #ececec;
+  border-width: 11px;
+  left: 90%;
+  margin-left: -11px; }
+
 /******************************************************************************/
 /* Dashboard Styling */
 /******************************************************************************/
